--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next": "^14.2.33",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
+    "node-fetch": "^2.7.0",
     "parse-torrent-name": "^0.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -68,6 +69,7 @@
     "@types/bs58": "^5.0.0",
     "@types/he": "^1.2.3",
     "@types/node": "24.0.3",
+    "@types/node-fetch": "^2.6.13",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^19.1.6",
     "@types/testing-library__jest-dom": "^5.14.9",
